backend added to generate random number aligning to the blocker probabilities